web dev dah kelar, tinggal index sama web yang satu lg itu

--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 <head>
 <title>Sidikriders | GitHub</title>
+<link href="style.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-<h1>ordo bla bla bla</h1>
+<nav><a href="/index.html"><div class="tombolhome">
+Sidik Riders
+</div></a></nav>
+
+
+<header>
+	<h1>"Baru Belajar"</h1>
+</header>
+
 </body>
 </html>
