--- a/web-dev.html
+++ b/web-dev.html
@@ -3,12 +3,18 @@
 <head>
 <link href="style-web-dev.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Rancho" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Rancho" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 <title>Pendapat Tentang Pengembangan Web</title>
 </head>
 <body>
+
+<nav><a href="/index.html"><div class="tombolhome">
+Sidik Riders
+</div></a></nav>
+
 <header>
-  <h1>"Perencanaan Sederhana tentang Saya dan Websites"</h1>
+  <h1>"Perencanaan Sederhana Saya tentang Websites"</h1>
 </header>
 
 <div class="badan">
@@ -28,11 +34,16 @@
     <h3>Perkiraan Saya tentang Proses Pembuatan Website dari Awal Hingga Akhir.</h3>
     <p>Menurut saya tahap-tahap dalalm proses pembuatan websites sudah sebenar-benarnya seperti yang telah di jabarkan oleh idesignstudio.com <a href="http://www.idesignstudios.com/faq/process/#.WMt1FIVOLIU">di sini.</a></p>
     </li>
-</ol></div>
-
-<footer><a href="/index.html"><div class="tombol-bawah">
-Sidik Riders
-</div></a></footer>
+</ol>
+<br>
+<br>
+<br>
+<br>
+<p class="watermarkbawah" style="color: rgba(187,187,187,0.88)">
+	All Reserved By sidikriders
+</p>
+<br>
+</div> 
 
 </body>
 </html>
