--- a/index.html
+++ b/index.html
@@ -1,20 +1,71 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <title>Sidikriders | GitHub</title>
 <link href="style.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
 </head>
 
 <body>
-<nav><a href="/index.html"><div class="tombolhome">
-Sidik Riders
-</div></a></nav>
-
-
+<div class="isi">
 <header>
-	<h1>"Baru Belajar"</h1>
+ <div id="contentheader">
+	<img id="logokecil" alt="Logo" src="Logo Sidik Riders Icon.png">
+	<h1>Sidik Riders</h1>
+	<h3><i>"A website for Fun and Anchor"</i></h3>
+   </div>
 </header>
 
+<img id="kucing" alt="kucing" src="FAMILY PORTRAIT.jpg">
+
+<!--profil yang di kanan-->
+<div id="profilmini">
+<div id="fotoprofil">
+	<img alt="foto-sidik" src="foto sidik.jpg">
+</div>
+<h4><b>ABOUT ME</b></h4>
+<p>Sidik Hidayatullah. '93.</p>
+<p>A wanderer in the world of imagination. Motion picture enthusiast. A Koreaboo.</p>
+<br>
+<br>
+<p>Find me here!</p>
+<ul>
+   <li><a href="https://www.facebook.com/sidik.hidayatullah" target="_blank"><!--<img alt="fb" src="Logo Facebook BW.png">--><div class="fb"></div></a></li>
+   <li><a href="https://www.instagram.com/sidiksigap/" target="_blank"><!--<img alt="ig" src="Logo Instagram BW.png">--><div class="ig"></div></a></li>
+   <li><a href="https://www.youtube.com/channel/UCNVNSSj2e4PTIpr6PCsw2Sw" target="_blank"><!-- <img alt="yt" src="Logo Youtube BW.png"> --><div class="yt"></div></a></li>
+</ul>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+</div>
+
+<div class="artikel">
+<ul>
+	<li>
+		<h3>Pendapat Saya Tentang Proses Pembuatan Websites</h3>
+		<p>Sejatinya website yang ingin saya buat ada berbagai banyak macam, namun untuk website official pertama saya, saya ingin membuat website tentang pariwisata dan paket wis...<a href="web-dev.html" target="_blank">[Continue Reading]</a></p>
+	</li>
+	<li><h3>Borobudur Sunrise</h3>
+	    <img alt="borobudur-sunrise" src="edit-7790-.jpg">
+		<p>A unique and tranquil atmosphere could be well impressed by having sun rise from the top of the Borobudur. Catch pictures of the sun, rising between the beautiful Merbabu and Merapi volcanoes. Having enjoyed the sun rise, we explore the villages nearby the temple by traditional horse cart to the village and local market. This...<a href="web-dev.html" target="_blank">[Continue Reading]</a></p></li>
+	<li><h3>LOOK WHAT YOU HAVE DONE, KARIMUNJAWA ISLAND SUNSET</h3>
+	<img alt="sunset-karimunjawa" src="33492879555_80a81ed717_o.jpg">
+	<p>The traveling and the knowledge about new places is taking over and I would like to share my observations with you. This post will be mostly photographs but also facts and insights to support the visuals. Hope you will follow my journey. For behind the scenes follow @TravelJunkieID Instagram story. Rant over. Here are some nice pictures of Karimunjawa Island sunset when we were at the mangroves park, very cool and I really enjoyed myself...<a href="#">[Continue Reading]</a></p></li>
+	<li></li>
+</ul>
+</div>
+</div>
+
+<footer>
+	All Reserved By &copy sidikriders
+</footer>
+
 </body>
+
 </html>
