--- a/web-dev.html
+++ b/web-dev.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<nav><a href="/index.html"><div class="tombolhome">
+<nav><a href="index.html"><div class="tombolhome">
 Sidik Riders
 </div></a></nav>
 
