--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<img alt="foto-sidik" src="foto sidik.jpg">
 </div>
 <h4><b>ABOUT ME</b></h4>
-<p>Sidik Hidayatullah. '93.</p>
+<p>Sidik Hidayatullah. Nov '93.</p>
 <p>A wanderer in the world of imagination. Motion picture enthusiast. A Koreaboo.</p>
 <br>
 <br>
