tambah icon buat d title head

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<link rel="shortcut icon" href="Logo Sidik Riders Icon title.png">
 <title>Sidikriders | GitHub</title>
 <link href="style.css" rel="stylesheet" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
