ngilangin blank d cntue read nya borobudur sunrise

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <ul>
 	<li>
 		<a href="web-dev.html" target="_blank"><h3>Pendapat Saya Tentang Proses Pembuatan Websites</h3></a>
-		<p>Sejatinya website yang ingin saya buat ada berbagai banyak macam, namun untuk website official pertama saya, saya ingin membuat website tentang pariwisata dan paket wis...<a href="web-dev.html" target="_blank">[Continue Reading]</a></p>
+		<p>Sejatinya website yang ingin saya buat ada berbagai banyak macam, namun untuk website official pertama saya, saya ingin membuat website tentang pariwisata dan paket wis...<a href="web-dev.html">[Continue Reading]</a></p>
 	</li>
 	<li><a href="#"><h3>Borobudur Sunrise</h3></a>
 	    <img alt="borobudur-sunrise" src="edit-7790-.jpg">
