target blank erase

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</li>
 	<li><a href="#"><h3>Borobudur Sunrise</h3></a>
 	    <img alt="borobudur-sunrise" src="edit-7790-.jpg">
-		<p>A unique and tranquil atmosphere could be well impressed by having sun rise from the top of the Borobudur. Catch pictures of the sun, rising between the beautiful Merbabu and Merapi volcanoes. Having enjoyed the sun rise, we explore the villages nearby the temple by traditional horse cart to the village and local market. This...<a href="#" target="_blank">[Continue Reading]</a></p></li>
+		<p>A unique and tranquil atmosphere could be well impressed by having sun rise from the top of the Borobudur. Catch pictures of the sun, rising between the beautiful Merbabu and Merapi volcanoes. Having enjoyed the sun rise, we explore the villages nearby the temple by traditional horse cart to the village and local market. This...<a href="#">[Continue Reading]</a></p></li>
 	<li><a href="#"><h3>LOOK WHAT YOU HAVE DONE, KARIMUNJAWA ISLAND SUNSET</h3></a>
 	<img alt="sunset-karimunjawa" src="33492879555_80a81ed717_o.jpg">
 	<p>The traveling and the knowledge about new places is taking over and I would like to share my observations with you. This post will be mostly photographs but also facts and insights to support the visuals. Hope you will follow my journey. Rant over. Here are some nice pictures of Karimunjawa Island sunset when we were at the mangroves park, very cool and I really enjoyed myself...<a href="#">[Continue Reading]</a></p></li>
