--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 
 <footer>
-	<p><a href="DOM-app-2.html">all reserved By &copy SidikRiders | 2017</a></p>
+	<a href="DOM-app-2.html"><p>all reserved By &copy SidikRiders | 2017</p></a>
 </footer>
 
 </body>
