update main page content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img data-src="./profile-compressed.jpg" alt="profile-pic">
       </div>
       <p class="name">Sidik H</p>
-      <p class="position">Fullstack Developer</p>
+      <p class="position">Full-Stack Developer</p>
       <div class="list-menu">
         <a href="#main-content">
           <p class="list active">
@@ -112,12 +112,11 @@
         <div class="about-sidik">
           <p class="hello">Hello,</p>
           <h2>I'm Sidik Hidayatullah</h2>
-          <h5>also known as Sidikriders</h5>
+          <h5>Full-Stack Developer</h5>
           <p>
-            It's been more than a year since I started in the IT field, and it was one of the best choices I made in my life. I am
-            currently working on the best Website to find business spaces in Indonesia, XWORK.
-            Besides programming, I also like photography, design, and videography. But nowadays I often spend my free time on Youtube
-            and logic's challenging coding quiz.
+            It's been a 5 years journey since I started working in the software development field, and it was one of the best choices I made in my life.
+            I am currently working on the best platform to make B2B procurement experience’s feel like B2C purchasing, SourceSage.
+            Besides programming, I also like photography, design, and videography. But nowadays I often spend my free time on Youtube and logic's challenging coding quiz.
           </p>
           <!-- <p>
             At first I was studying in the hospitality field but when I went on an on the job training program, I felt that I did
@@ -126,77 +125,49 @@
             decided to take part in an office at a hotel on my second on the job training program
           </p> -->
           <div class="overall-skill">
-            <h3>Overall Skill</h3>
+            <h3>Skills</h3>
             <div class="skill">
-              <p class="title">HTML5</p>
-              <div class="skill-meter" skill="85">
-                <div class="thumb"></div>
-                <div class="gauge"></div>
-              </div>
+              <p class="title">ReactJS</p>
             </div>
             <div class="skill">
-              <p class="title">CSS</p>
-              <div class="skill-meter" skill="90">
-                <div class="thumb"></div>
-                <div class="gauge"></div>
-              </div>
+              <p class="title">TypeScript</p>
             </div>
             <div class="skill">
-              <p class="title">Javascript</p>
-              <div class="skill-meter" skill="95">
-                <div class="thumb"></div>
-                <div class="gauge"></div>
-              </div>
+              <p class="title">NextJS</p>
             </div>
             <div class="skill">
-              <p class="title">JQuery</p>
-              <div class="skill-meter" skill="90">
-                <div class="thumb"></div>
-                <div class="gauge"></div>
-              </div>
+              <p class="title">ExpressJS</p>
             </div>
             <div class="skill">
-              <p class="title">React</p>
-              <div class="skill-meter" skill="85">
-                <div class="thumb"></div>
-                <div class="gauge"></div>
-              </div>
+              <p class="title">React Native</p>
             </div>
             <div class="skill">
-              <p class="title">Vue</p>
-              <div class="skill-meter" skill="70">
-                <div class="thumb"></div>
-                <div class="gauge"></div>
-              </div>
+              <p class="title">Sequelize</p>
             </div>
             <div class="skill">
-              <p class="title">NodeJS</p>
-              <div class="skill-meter" skill="95">
-                <div class="thumb"></div>
-                <div class="gauge"></div>
-              </div>
+              <p class="title">MongoDB & Mongoose</p>
             </div>
           </div>
           <div class="social-media">
-            <a class="sosmed" href="https://www.instagram.com/sidiksigap/" target="_blank" title="Instagram">
+            <a class="sosmed instagram" href="https://www.instagram.com/sidiksigap/" target="_blank" title="Instagram">
               <i class="fab fa-instagram"></i>
             </a>
-            <a class="sosmed" href="https://web.facebook.com/sidik.hidayatullah" target="_blank" title="Facebook">
+            <!-- <a class="sosmed facebook" href="https://web.facebook.com/sidik.hidayatullah" target="_blank" title="Facebook">
               <i class="fab fa-facebook"></i>
             </a>
-            <a class="sosmed" href="https://twitter.com/sisidik" target="_blank" title="Twitter">
+            <a class="sosmed twitter" href="https://twitter.com/sisidik" target="_blank" title="Twitter">
               <i class="fab fa-twitter"></i>
-            </a>
-            <a class="sosmed" href="https://www.youtube.com/channel/UCNVNSSj2e4PTIpr6PCsw2Sw" target="_blank" title="Youtube">
+            </a> -->
+            <!-- <a class="sosmed youtube" href="https://www.youtube.com/channel/UCNVNSSj2e4PTIpr6PCsw2Sw" target="_blank" title="Youtube">
               <i class="fab fa-youtube"></i>
-            </a>
-            <a class="sosmed" href="https://www.linkedin.com/in/sidik-hidayatullah/" target="_blank" title="Linkedin">
+            </a> -->
+            <a class="sosmed linkedin" href="https://www.linkedin.com/in/sidik-hidayatullah/" target="_blank" title="Linkedin">
               <i class="fab fa-linkedin"></i>
             </a>
-            <a class="sosmed" href="https://github.com/sidikriders" target="_blank" title="Github">
+            <a class="sosmed github" href="https://github.com/sidikriders" target="_blank" title="Github">
               <i class="fab fa-github"></i>
             </a>
-            <a class="sosmed" href="https://www.codewars.com/users/sidikriders" target="_blank" title="Codewars">
+            <a class="sosmed codewars" href="https://www.codewars.com/users/sidikriders" target="_blank" title="Codewars">
               <i class="fa fa-code"></i>
             </a>
           </div>
@@ -208,38 +179,23 @@
         <div class="experiences">
           <h3>
             <i class="fas fa-briefcase"></i>
-            Experience</h3>
+            Experience
+          </h3>
           <div class="exp">
             <div class="dot-mark"></div>
-            <p class="title">Account Receivable</p>
-            <span class="subtitle">Hotel Santika BSD City, Januari 2016 - September 2016</span>
-            <div class="desc">
-              <p>
-                Responsible to maintain AR aging report and payment collection.
-                When I was here, my daily activity start with printing yesterday's Outstanding Charge,
-                then followed by creating Invoice and Receipt based on the data.
-              </p>
-              <p>
-                I also responsible to input yesterday's payment. There is two kind of payment, cash and credit. Every credit payment must be inputted to program so that it can be tracked to create report every end of the month
-              </p>
-            </div>
-          </div>
-          <div class="exp">
-            <div class="dot-mark"></div>
-            <p class="title">Software Engineer</p>
-            <a href="http://xwork.co" target="_blank" rel="noopener noreferrer">
-              <span class="subtitle">XWORK (PT Urban Solusi Digital), October 2017 - Now</span>
+            <p class="title">Front End Developer</p>
+            <a href="http://tempat.com" target="_blank" rel="noopener noreferrer">
+              <span class="subtitle">SourceSage (Sourcesage PTE LTD), September 2020 - Now</span>
             </a>
             <div class="desc">
               <p>
-                Basically, you can say that my position is front end developer, but because we use NodeJS automatically I also working in backend area, thus make me a software engineer.
+                In SourceSage, I work full on Typescript React. I became more understanding of the React app structure, development cycle, state management, especially the implementation on e-commerce platforms.
               </p>
               <p>
-                In my time here, I sharpening my skill in javascript, apps architecture, and DevOps. For DOM manipulator I use JQuery for fast development and great functionality.
+                This was the first time I implemented UI Framework this much on a Production app.
               </p>
               <p>
-                I always create web page as similiar as possible with the design provided. Often the design is not include with mobile view, so I creatively manipulating the DOM element to also support responsiveness.
-                For urgent development, I can create my own design based from current theme for quick result.
+                With SourceSage I also learn more about self management and how to work remotely with teams that consist of people with different languages and nationalities.
               </p>
             </div>
           </div>
@@ -247,17 +203,52 @@
             <div class="dot-mark"></div>
             <p class="title">Front End Developer</p>
             <a href="http://tempat.com" target="_blank" rel="noopener noreferrer">
-              <span class="subtitle">Tempat.com (PT Urban Solusi Digital), October 2019 - Now</span>
+              <span class="subtitle">Tempat.com (PT Urban Solusi Digital), October 2019 - September 2020</span>
             </a>
             <div class="desc">
               <p>
-                This is the next product of XWORK. If XWORK is a platform to rent working space, Tempat.com try to also list not only working space but also other kind of place like restaurant and sport venue. 
+                This is the next product of XWORK. If XWORK is a platform to rent working space, Tempat.com tries to also list not only working space but also other kinds of places like restaurants and sports venues.
               </p>
               <p>
-                This is the first time I use side server rendered react in production. We use NextJS and ExpressJS for side server rendering and server routing.
+                This is the first time I use a side server rendered react in production. We use NextJS and ExpressJS for side server rendering and server routing.
               </p>
               <p>
-                Tempat.com try to use mobile version design only, so there is no difference when the web is opened in the desktop and mobile. We use this approach because 80% of our traffic in XWORK is from mobile.
+                Tempat.com tries to use mobile version design only, so there is no difference when the web is opened in the desktop and mobile. We use this approach because 80% of our traffic in XWORK is from mobile.
+              </p>
+            </div>
+          </div>
+          <div class="exp">
+            <div class="dot-mark"></div>
+            <p class="title">Software Engineer</p>
+            <a href="http://xwork.co" target="_blank" rel="noopener noreferrer">
+              <span class="subtitle">XWORK (PT Urban Solusi Digital), October 2017 - September 2020</span>
+            </a>
+            <div class="desc">
+              <p>
+                Basically, you can say that my position is front end developer, but because we use NodeJS automatically I also work in the backend area, thus making me a software engineer (Full-Stack Developer).
+              </p>
+              <p>
+                In my time here, I sharpened my skill in javascript, apps architecture, and DevOps. For DOM manipulation I use JQuery for fast development and great functionality.
+              </p>
+              <p>
+                I always create web pages as similar as possible with the design provided. Often the design is not included with the mobile view, so I creatively manipulate the DOM element to also support responsiveness.
+                For urgent development, I can create my own design based on the current theme for quick results.
+              </p>
+            </div>
+          </div>
+          <div class="exp">
+            <div class="dot-mark"></div>
+            <p class="title">Account Receivable</p>
+            <span class="subtitle">Hotel Santika BSD City, Januari 2016 - September 2016</span>
+            <div class="desc">
+              <p>
+                Responsible for maintaining AR aging reports and payment collection.
+                When I was here, my daily activity started with printing yesterday's Outstanding Charge,
+                then followed by creating Invoice and Receipt based on the data.
+              </p>
+              <p>
+                I was also responsible for inputting yesterday's payment. There are two kinds of payment, cash and credit.
+                Every credit payment must be inputted to the program so that it can be tracked to create a report every end of the month.
               </p>
             </div>
           </div>
@@ -269,16 +260,6 @@
           </h3>
           <div class="exp">
             <div class="dot-mark"></div>
-            <p class="title">Hospitality Management</p>
-            <span class="subtitle">Trisakti Institute of Tourism, 2011 - 2015</span>
-            <div class="desc">
-              <p>
-                I learn about Hospitality Management, starting from Operational Side to Back Office Side.
-              </p>
-            </div>
-          </div>
-          <div class="exp">
-            <div class="dot-mark"></div>
             <p class="title">Full-Stack Web Developer Bootcamp</p>
             <span class="subtitle">HACKTIV8, 2017 - 2017</span>
             <div class="desc">
@@ -287,6 +268,16 @@
               </p>
               <p>
                 Overall my time here is fun and chalengging, I was glad to participate in fullstack course.
+              </p>
+            </div>
+          </div>
+          <div class="exp">
+            <div class="dot-mark"></div>
+            <p class="title">Hospitality Management</p>
+            <span class="subtitle">Trisakti Institute of Tourism, 2011 - 2015</span>
+            <div class="desc">
+              <p>
+                I learn about Hospitality Management, starting from Operational Side to Back Office Side.
               </p>
             </div>
           </div>
@@ -398,7 +389,7 @@
     </div>
     <footer>
       <div class="credit">
-        sidikriders 2020
+        sidikriders 2022
       </div>
       <div class="credit" style="font-size: 12px">
         <div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
