add silly project, but it got commented

--- a/index.html
+++ b/index.html
@@ -386,6 +386,20 @@
           </div>
         </div>
       </div>
+      <!-- <div id="silly-project">
+        <div class="content">
+          <h2>Silly Project</h2>
+          <p class="subtitle">Small apps I created on free time.</p>
+
+          <div class="silly">
+            <div class="title">
+              <div class="arrow"></div>
+              <h3>Response Time Test</h3>
+            </div>
+            <p>Inspired by some web app, I try to re-create it using vanilla javascript. To play you can click the green box and click again once the box turned blue.</p>
+          </div>
+        </div>
+      </div> -->
     </div>
     <footer>
       <div class="credit">
