--- a/basic-user-list/index.html
+++ b/basic-user-list/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/basic-user-list/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic User List</title>
-    <script type="module" crossorigin src="/assets/index.be8a2820.js"></script>
-    <link rel="stylesheet" href="/assets/index.ed9c3dd0.css">
+    <script type="module" crossorigin src="/basic-user-list/assets/index.be8a2820.js"></script>
+    <link rel="stylesheet" href="/basic-user-list/assets/index.ed9c3dd0.css">
   </head>
   <body>
     <div id="root"></div>
